--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -469,17 +471,116 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-subs">
+          <p class="footer-subscribe-title">Подпишитесь на рассылку</p>
+          <form class="footer-subscribe-form">
+            <input
+              type="email"
+              class="footer-subscribe-input"
+              placeholder="E-mail"
+              name="subscribe"
+            />
+            <button type="submit" class="footer-subscribe-btn">
+              Подписаться
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
-      <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="masters-soc-icon" width="18" height="18">
+          <svg class="modal-icon-close" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label class="modal-label" for="user-name">Имя</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                id="user-name"
+                class="modal-input"
+                name="user-name"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label class="modal-label" for="user-tel">Телефон</label>
+            <div class="input-wrap">
+              <input
+                type="tel"
+                id="user-tel"
+                class="modal-input"
+                name="user-tel"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label class="modal-label" for="user-mail">Почта</label>
+            <div class="input-wrap">
+              <input
+                type="email"
+                id="user-mail"
+                class="modal-input"
+                name="user-mail"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user-comment" class="modal-label">Комментарий</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-text"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="privacy"
+              value="true"
+              class="modal-check visually-hidden"
+              id="privacy"
+            />
+            <label for="privacy" class="check-text">
+              <span>
+                <svg class="check-icon" width="11" height="8">
+                  <use
+                    href="./images/symbol-defs.svg#icon-check"
+                  ></use></svg></span
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="" class="check-text-a">Условия договора</a>
+            </label>
+          </div>
+
+        <button type="submit" class="modal-submit-btn" >Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    </footer>
   </body>
 </html>
