--- a/portfolio.html
+++ b/portfolio.html
@@ -331,6 +331,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subs">
+          <p class="footer-subscribe-title">Подпишитесь на рассылку</p>
+          <form class="footer-subscribe-form">
+            <input
+              type="email"
+              class="footer-subscribe-input"
+              placeholder="E-mail"
+              name="subscribe"
+            />
+            <button type="submit" class="footer-subscribe-btn">
+              Подписаться
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
